margin fixes, removing white space

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@
     h1{     
       font-size:1.5rem;
       margin:0;
-      letter-spacing:.02em;
     }
 
     h2{
@@ -26,7 +25,7 @@
       font-size:1.5rem;
       font-weight:600px;
       color:var(--text);
-      margin-bottom:.35rem;
+      margin:0;
     }
 
     h3{
@@ -35,7 +34,7 @@
       font-weight:600px;
       text-transform:uppercase;
       color:var(--text);
-      margin-bottom:.35rem;
+      margin:0;
     }
 
     h4{
@@ -43,14 +42,14 @@
       font: size 1rem;
       text-transform:uppercase;
       color:var(--text);
-      margin-bottom:.35rem;
+      margin:0;
     }
 
     p{
-      margin-bottom:.35em;
       color:var(--text);
       font-size:1rem;
       line-height:.5rem;
+      margin:0;
     }
 
 
